Full-screen: Don't change the collectionBehavior of the WebView's NSWindow if not necessary https://bugs.webkit.org/show_bug.cgi?id=63217 <rdar://problem/9660291>

Reviewed by Darin Adler.

Check to see if the NSWindow hosting the WebView is not on the active space before changing the window's
collectionBehavior.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController beganExitFullScreenAnimation]):

Canonical link: https://commits.webkit.org/80113@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90851 268f45cc-cd09-0410-ab3c-d52691b4dbfc